--- a/app.css
+++ b/app.css
@@ -243,11 +243,11 @@ h5 {
 }
 
 .player-result-list {
-	text-align: left;
+	position: relative;
+	right: 20px;
+	text-align: center;
 	color: #545d65;
 	font-size: 1rem;
-	position: relative;
-	right: 10%;
 }
 
 /* footer */
